# gl-tutorial

./: .gitignore  CMakeLists.txt  README.md  build.bat
assets/: CMakeLists.txt
shaders/: CMakeLists.txt
shaders/src/: light_cube.fs  lighting.fs  lighting.vs  triangle.frag  triangle.vert
src/: CMakeLists.txt  main.cpp  pipeline.cpp  pipeline.h
src/common/: application.cpp  application.h  camera.cpp  camera.h  entry_point.h  pipeline.cpp  pipeline.h
src/getting-started/: CMakeLists.txt  getting_started.cpp
src/lighting/: CMakeLists.txt  lighting.cpp  lighting.h  main.cpp
